hidari/migi layout bug fix

--- a/less/variables.less
+++ b/less/variables.less
@@ -32,27 +32,28 @@
 //## Settings for some of the most global styles.
 
 //** Hidari (left) container
-@hidari-bg:             @gray-darker;
-@hidari-border:         @gray-dark;
-@hidari-color:          @gray-lighter;
-@hidari-strong:         @gray-lighter;
-@hidari-muted:          @gray-dark;
+@hidari-bg:                 @gray-darker;
+@hidari-color:              @gray-lighter;
+@hidari-strong:             @gray-lighter;
+@hidari-muted:              @gray-dark;
 //** Migi (right) container
-@migi-bg:               @gray-lighter;
-@migi-border:           @gray-light;
-@migi-color:            @gray-dark;
-@migi-strong:           @gray-darker;
-@migi-muted:            @gray-light;
+@migi-bg:                   @gray-lighter;
+@migi-color:                @gray-dark;
+@migi-strong:               @gray-darker;
+@migi-muted:                @gray-light;
+//** Centerline border
+@centerline-border-width:   @padding-small-horizontal;
+@centerline-border-color:   @gray-light;
 //** Brand (logo)
-@brand-bg:              @gray-dark;
-@brand-width:           288px;
-@brand-zindex:          (@nav-zindex - 1);
+@brand-bg:                  @gray-dark;
+@brand-width:               288px;
+@brand-zindex:              (@nav-zindex - 1);
 //** Links
-@link-color:            @azure;
-@link-hover-color:      @link-color;
-@link-hover-decoration: underline;
+@link-color:                @azure;
+@link-hover-color:          @link-color;
+@link-hover-decoration:     underline;
 //** Navigation
-@nav-zindex:            999;
+@nav-zindex:                999;
 
 
 //== Typography
